Skip to content

Having the Web Interface Module Causes Chromecast Streaming to Break

I'm on VLC 3.0.2 64 bit. When I turn on Web under Main Interfaces > Interface Module, I am no longer able to stream to Chromecast. Doesn't matter what file type (mp3, mp4, mkv, etc...). It simply loads the file and closes it right away. As soon as I turn off "Web" and restart, I am able to use Chromecast streaming. I turned on Web to be able to use the VLC remote on Android.

I am running an intel I5 with 8GB of ram on Windows 10. Again, this does not appear to be related to the installation, but simply something within VLC itself causes these features to not work well together. Hope this helps and thank you.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information