sout: chromecast: remove flawed sout-test in Open

The relevant code suffers from some immediate flaws, with no real
gain:

  1. The implicit http-bind from within sout_StreamChainNew has a high
     chance of colliding with other things in vlc (most notably a
     web interface).

  2. It does not bind to the same httpd URI as is later used in the
     module, causing the check to signal false security in terms of
     usability.

  3. As the sout is created only to immediately be shut down, other
     attempts (not made within the module) to create a relevant sout
     will race with this "check".

     Just because we succeed in Open does not mean that we will
     succeed later on, nor does failure guarantee further failed
     attempts.

  4. There is no reason for us to check if a muxer is available at
     this stage as it:

        a) Does not send any data down the pipe, meaning that we might
           fail anyway when we actually get started due to, as an
           example, codec issues.

        b) Does not match what might actually be used (avformat/webm
           or avformat/mkv is selected further into the
           implementation)

        c) Is the wrong way of checking things. If we want to make
           sure that an sout is created before some other work is
           done, we should create an sout which we then use, _before_,
           other work is done.

refs: #20380
Signed-off-by: Thomas Guillem <thomas@gllm.fr>